[package]
name = "steam_guard"
version = "1.0.1"
authors = ["SFort <github@ssf.tf>"]
description = "A Simple TOTP crate intended for steam guard authentication"
documentation = "https://docs.rs/crate/steam_guard"
repository = "https://github.com/SFort/steam_guard"
readme = "README.md"
categories = ["authentication"]
keywords = ["steam", "totp", "login"]
license = "MIT"
license-file = "LICENSE"

[features]
default = ["base64"]

[dependencies]
base64 = {version = "0.11.0", optional = true}
sha1 = "0.6.0"
