[package]
name = "steam_guard"
version = "1.1.0-beta36"
authors = ["SFort <github@ssf.tf>"]
description = "A Simple TOTP crate intended for steam guard authentication"
documentation = "https://docs.rs/crate/steam_guard"
repository = "https://github.com/SFort/steam_guard"
readme = "README.md"
categories = ["authentication"]
keywords = ["steam", "totp", "login"]
license = "MIT"
license-file = "LICENSE"

[features]
default = ["base64"]
steam_web = ["base64", "num-bigint","tinyjson"]

[dependencies]
sha1 = "0.6.0"
base64 = {version = "0.11.0", optional = true}
num-bigint = {version = "0.2.6", optional = true}
tinyjson = {version = "2.1.1", optional= true}
getrandom = {version = "0.1.14", optional=true}
